<resources>
    <string name="app_name">Moods</string>
    <string name="Add_Mood_Notes" />
    <string name="anxiousface">AnxiousFace</string>
    <string name="happyface">HappyFace</string>
    <string name="happyface2">HappyFace2</string>
    <string name="madface">MadFace</string>
    <string name="neutralface1">NeutralFace1</string>
    <string name="sadface">SadFace</string>
    <string name="floatingactionbutton">FloatingActionButton</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_title2">Enter Title</string>
    <string name="write_how_you_feel" />
    <string name="floatingactionbutton2" />
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="picture_of_mood">Picture Of mood</string>
    <string name="moods">Moods</string>
    <string name="moods2">Moods</string>
    <string name="enter_description">Enter Description</string>
    <string name="back_button">Back Button</string>
    <string name="empty" />
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="textview9">TextView</string>
    <string name="moodpap">MoodPap</string>
    <string name="no_moods_yet" />
    <string name="how_are_you_feeling_today">How are you feeling today</string>
    <string name="edit_mood">Edit Mood</string>
    <string name="moodslower">moods</string>
    <string name="no_moods_yet2">no moods yet</string>
    <string name="no_moods_yet3">No moods yet</string>
</resources>