<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateNoteFragment">

    <!-- TODO PHASE 1.4: HorizontalScrollView of Mood Images -->
    <HorizontalScrollView
        android:id="@+id/MoodsScroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/anxious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"

                android:contentDescription="@string/anxiousface"
                android:src="@drawable/ic_anxious_outline_false" />

            <ImageView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:contentDescription="@string/happyface"
                android:src="@drawable/ic_content_outline_false" />


            <ImageView
                android:id="@+id/happy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:contentDescription="@string/happyface2"
                android:src="@drawable/ic_happy_outline_false" />

            <ImageView
                android:id="@+id/mad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:contentDescription="@string/madface"
                android:src="@drawable/ic_mad_outline_false" />

            <ImageView
                android:id="@+id/neutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:contentDescription="@string/neutralface1"
                android:src="@drawable/ic_neutral_outline_false" />

            <ImageView
                android:id="@+id/sad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:contentDescription="@string/sadface"
                android:src="@drawable/ic_sad_outline_false" />

        </LinearLayout>
    </HorizontalScrollView>
    <!-- TODO PHASE 1.4: FABs For Submitting and Cancelling Mood Note Creation -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/floatingok"

        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:contentDescription="@string/Add_Mood_Notes"
        android:focusable="true"
        android:src="@drawable/ic_baseline_check_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/floatingdel2"

        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:contentDescription="@string/Add_Mood_Notes"
        android:focusable="true"

        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/floatingok" />

    <!-- TODO PHASE 1.4: Use EditText for Mood Note Title and note content -->

    <EditText
        android:id="@+id/titleupdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/roboto_medium"
        android:inputType="text"
        android:text="@string/lorem_ipsum"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MoodsScroller" />

    <EditText
        android:id="@+id/contentupdate"
        android:layout_width="337dp"
        android:layout_height="409dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:inputType="text"
        android:text="@string/textview"
        android:gravity="top"
        android:fontFamily="@font/roboto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleupdate" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_are_you_feeling_today"
        android:textSize="18sp"
        android:fontFamily="@font/playfair_display_bold"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="25dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>