<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewNoteFragment">

    <!-- TODO PHASE 1.3: ImageView that holds the Mood Image -->


    <!-- TODO PHASE 1.3: Display Text for Mood Note Title and note content -->

    <!-- TODO PHASE 1.3: FABs For Deleting and Editing Mood Note -->

    <ImageView
        android:id="@+id/backbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_button" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="92dp"
        android:contentDescription="@string/moodpap"
        android:src="@drawable/ic_happy_outline_false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/floatingedit"

        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:contentDescription="@string/Add_Mood_Notes"
        android:focusable="true"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/floatingdel"

        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:contentDescription="@string/Add_Mood_Notes"
        android:focusable="true"

        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/floatingedit" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:background="@null"
        android:layout_marginTop="30dp"
        android:textSize="36sp"
        android:textStyle="bold"
        android:text="@string/lorem_ipsum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="339dp"
        android:layout_height="343dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>