<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteFeedFragment">


    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/floatingActionEmpty"

        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:contentDescription="@string/Add_Mood_Notes"
        android:focusable="true"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/MoodsText"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="center"
        android:text="@string/moods"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MoodsText"
        app:srcCompat="@drawable/ic_empty_state" />

    <TextView
        android:id="@+id/nomoods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/no_moods_yet2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>